# twingame

./: README.md  pyproject.toml  specs.txt
python/twingame/: __main__.py  sort_hcp.py  twingame.py
share/config/: twin_config_hcp.json
